@@ -16,6 +16,7 @@ systemd System and Service Manager
     - move journal completions to separate module journal;
     - move journalctl to separate module journal;
     - move journald service to separate module journal;
+    - move journald to separate module journal;
  * sd-messages.h:
     - remove unused id SD_MESSAGE_MACHINE_START;
     - remove unused id SD_MESSAGE_MACHINE_STOP;
